<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layoutMain"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".MainActivity">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="25dp"
        android:layout_height="30dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="16dp"
        android:background="#00CA1919"
        android:src="@drawable/planet_edit2"
        app:layout_constraintStart_toStartOf="@+id/textView_planIt"
        app:layout_constraintTop_toTopOf="@+id/textView_planIt" />

    <TextView
        android:id="@+id/textView_planIt"
        android:layout_width="333dp"
        android:layout_height="131dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/plan_it"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#A6FFFFFF"
        android:textSize="90sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="260dp"
        android:text="@string/down_to_earth_events_planning"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_planAnEvent"
        android:alpha="0.75"
        android:layout_width="377dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="66dp"
        android:text="@string/plan_an_event"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_planIt" />

    <Button
        android:id="@+id/button_BrowseAvailableEvents"
        android:alpha="0.75"
        android:layout_width="377dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/browse_available_events"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_planAnEvent" />


</androidx.constraintlayout.widget.ConstraintLayout>