<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_2"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/nextThemeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:text="@string/next"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseThemeSpinner" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/push_button3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="77dp"
        android:background="@drawable/planet_edit2"
        android:padding="15dp"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/nextThemeButton"
        app:layout_constraintStart_toEndOf="@+id/backThemebutton"
        app:layout_constraintTop_toBottomOf="@+id/chooseThemeSpinner" />

    <Button
        android:id="@+id/backThemebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:text="@string/back"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseThemeSpinner" />

    <TextView
        android:id="@+id/selectThemeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/cairo_light"
        android:text="@string/select_theme"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chooseThemeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/cairo_light"
        android:text="@string/choose_your_theme"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SuggestedTextView" />

    <TextView
        android:id="@+id/SuggestedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/cairo_light"
        android:text="@string/suggested"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectThemeText" />

    <Spinner
        android:id="@+id/chooseThemeSpinner"
        style="@android:style/Widget.Holo.Spinner"
        android:layout_width="131dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:background="#00FFFFFF"
        android:entries="@array/chooseThemeSpinner"
        android:forceDarkAllowed="true"
        android:spinnerMode="dropdown"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseThemeTextView" />

    <TextView
        android:id="@+id/suggestedThemeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="156dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/SuggestedTextView"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>