<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/letsPlan1cText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="62dp"
        android:fontFamily="@font/cairo_light"
        android:text="@string/let_s_plan_your_party"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/helpPlan1cButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="77dp"
        android:background="@drawable/planet_edit2"
        android:padding="15dp"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/nextPlan1cButton"
        app:layout_constraintStart_toEndOf="@+id/backPlan1cButton"
        app:layout_constraintTop_toBottomOf="@+id/desccEditText" />

    <Button
        android:id="@+id/backPlan1cButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/back"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desccEditText" />

    <Button
        android:id="@+id/nextPlan1cButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:text="@string/next"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desccEditText" />

    <Spinner
        android:id="@+id/partyTypeSpinner"
        style="@android:style/Widget.Holo.Spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="24dp"
        android:dropDownWidth="wrap_content"
        android:entries="@array/partyTypeSpinner"
        android:forceDarkAllowed="true"
        app:layout_constraintStart_toStartOf="@+id/partyTypecTextView"
        app:layout_constraintTop_toBottomOf="@+id/letsPlan1cText" />

    <EditText
        android:id="@+id/desccEditText"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="Tell your guests about your event..."
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desccTextView" />

    <TextView
        android:id="@+id/partyTypecTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="304dp"
        android:text="@string/party_type"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/letsPlan1cText" />

    <TextView
        android:id="@+id/numOfGuestscTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="292dp"
        android:text="@string/of_guests"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partyTypecTextView" />

    <TextView
        android:id="@+id/ctextView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="328dp"
        android:text="Budget:"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOfcEditText" />

    <TextView
        android:id="@+id/WherecTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="316dp"
        android:text="@string/where_is_the_event"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budgetcEditText" />

    <EditText
        android:id="@+id/wherecEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="44dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budgetcEditText" />

    <TextView
        android:id="@+id/ctextView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="348dp"
        android:text="@string/when_is_the_event_mm_dd_yy"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wherecEditText" />

    <EditText
        android:id="@+id/whencEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="216dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="date"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wherecEditText" />

    <TextView
        android:id="@+id/desccTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="40dp"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctextView17" />

    <EditText
        android:id="@+id/numOfcEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partyTypeSpinner" />

    <EditText
        android:id="@+id/budgetcEditText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numOfcEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>