<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/button_helpChoose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="524dp"
        android:background="@drawable/planet_edit2"
        android:clickable="false"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_BackChoose"
        android:layout_width="82dp"
        android:layout_height="42dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="48dp"
        android:text="@string/back"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ChooseFromTemplate" />

    <TextView
        android:id="@+id/textView_letsPlanchoose"
        android:layout_width="364dp"
        android:layout_height="82dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/cairo_light"
        android:lineSpacingExtra="-20sp"
        android:text="Before you begin..."
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/textView3"
        android:layout_width="363dp"
        android:layout_height="115dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="152dp"
        android:fontFamily="@font/cairo_light"
        android:lineSpacingExtra="0.1sp"
        android:text="For novice organizers, we recommend choosing from one of our templates. For more experienced event planners, Custom Events provide more
flexibility for the all-too-important details."
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_ChooseFromTemplate"
        android:layout_width="136dp"
        android:layout_height="87dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:text="@string/choose_from_template"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button_createYour"
        android:layout_width="138dp"
        android:layout_height="87dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:text="@string/create_your_own"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>